<resources>
    <string name="app_name">Bhagyalakshmi</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Bhagyalakshmi</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="login_title">BHAGYALAKSHMI TRADERS</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_title">Sign In</string>
    <string name="save_button_title">Save</string>
    <string name="cancel_button_title">Cancel</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_my_profile">My Profile</string>
    <string name="drawer_change_password">Change Password</string>
    <string name="drawer_location">Location</string>
    <string name="drawer_my_orders">Orders</string>
    <string name="drawer_active_orders">Active Orders</string>
    <string name="drawer_sales_distributors_retailers">Sales/Distributors/Retailers</string>
    <string name="drawer_payments">Payments</string>
    <string name="drawer_messages">Messages</string>
    <string name="drawer_sync">Sync</string>
    <string name="drawer_logout">Logout</string>
    <string name="dashboard_retailers_distributors">Retailers and Distributors</string>
    <string name="dashboard_recent_order_details">Recent Order Details</string>
    <string name="dashboard_my_sales">My Sales</string>
    <string name="dashboard_statistics">Statistics</string>
    <string name="admin_order_id">Order Id</string>
    <string name="Sync_now">Sync Now</string>
    <string name="Exit">Exit</string>
    <string name="admin_name">Name</string>
    <string name="admin_placed_by">Placed By</string>
    <string name="order_value">Order Value</string>
    <string name="order_status">Order Status</string>

    <string name="distributorsales_category_distributor">Product/\nDescription</string>
    <string name="distributorsales_qty_units">Qty/Units</string>
    <string name="distributorsales_price">Price</string>
    <string name="distributorsales_action">Action</string>
    <string name="retaillookup_title">Select Retailer</string>
    <string name="product_title">Select Product</string>
    <string name="retail_name">Retailer Name</string>
    <string name="group">Category Group</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="units">Units</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="tax">Tax</string>
    <string name="amount">Amount</string>
    <string name="add">ADD</string>
    <string name="addandnew">ADD AND NEW</string>
    <string name="reset">RESET</string>
    <string name="select">SELECT</string>
    <string name="submit">SUBMIT</string>
    <string name="opendrawer">open</string>
    <string name="closedrawer">close</string>
    <string name="title_activity_distributor_sales">DistributorSales</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_tracker">Tracker</string>
    <string name="title_activity_distributor">Distributor</string>
    <string name="title_activity_retailer_look_up">RetailerLookup</string>
    <string name="title_activity_admin_orders">AdminOrders</string>
    <string name="title_activity_distributor_sales_orders">DistributorSalesOrders</string>
    <string name="title_activity_distributor_orders">DistributorOrders</string>
    <string name="select_distributor">Select Distributor</string>
    <string name="title_activity_sales_person_orders">SalesPersonOrders</string>
    <string name="title_activity_sales_person_lookup">SalesPersonLookUp</string>
    <string name="title_activity_sales_person">SalesPerson</string>
    <string name="title_activity_order_success">OrderSuccess</string>
    <string name="viewmore">View More</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_order__page">Order_Page</string>
    <string name="title_activity_admin__orders">Admin_Orders</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_admin__view__order">Admin_View_Order</string>
    <string name="placed_by">Placed By  :</string>
    <string name="lable_customer_name">Customer Name</string>
    <string name="lable_order_date">Order Date  :</string>
    <string name="lable_order_no">Order No  :</string>
    <string name="title_activity_maps">Map</string>
</resources>
