<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sourceedge.bhagyalakshmi.orders.changepassword.Change_Password"
    tools:showIn="@layout/activity_change_password">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
    <LinearLayout
        android:layout_above="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:padding="@dimen/dimen_10dp">
        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:textColorHint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:fontFamily="fonts/Roboto-Bold.ttf"
                android:padding="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:gravity="center_vertical"
                android:id="@+id/oldPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:textColorHint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:fontFamily="fonts/Roboto-Bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:padding="@dimen/dimen_10dp"
                android:inputType="textPassword"
                android:gravity="center_vertical"
                android:textColorHint="@color/black"
                android:id="@+id/newPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:textColorHint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:fontFamily="fonts/Roboto-Bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:padding="@dimen/dimen_10dp"
                android:inputType="textPassword"
                android:gravity="center_vertical"
                android:textColorHint="@color/black"
                android:id="@+id/confirmPassowrd"/>
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
        <LinearLayout
            android:id="@+id/footer"
            android:weightSum="2"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/cancel_button"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button_title"
                android:textColor="@color/white"
                android:background="@color/viewcolor"
                android:layout_marginRight="@dimen/dimen_1dp"/>
            <Button
                android:id="@+id/save_button"
                android:layout_weight="1"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="wrap_content"
                android:text="@string/save_button_title"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                />

        </LinearLayout>


    </RelativeLayout>



</LinearLayout>
