<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_100dp"
            android:gravity="bottom"
            android:padding="@dimen/padding_15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account_white_24dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drawer_my_profile"
                android:textSize="@dimen/textsize_18sp"
                android:paddingLeft="@dimen/padding_10dp"
                android:textColor="@color/white"
                android:gravity="bottom" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_1dp"
            android:background="@color/white_60"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:padding="@dimen/padding_15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_key_variant_white_24dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drawer_change_password"
                android:textSize="@dimen/textsize_18sp"
                android:paddingLeft="@dimen/padding_10dp"
                android:textColor="@color/white"
                android:gravity="bottom" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_1dp"
            android:background="@color/white_60"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:padding="@dimen/padding_15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clipboard_white_24dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drawer_my_orders"
                android:textSize="@dimen/textsize_18sp"
                android:paddingLeft="@dimen/padding_10dp"
                android:textColor="@color/white"
                android:gravity="bottom" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_1dp"
            android:background="@color/white_60"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:padding="@dimen/padding_15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_white_24dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drawer_payments"
                android:textSize="@dimen/textsize_18sp"
                android:paddingLeft="@dimen/padding_10dp"
                android:textColor="@color/white"
                android:gravity="bottom" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_1dp"
            android:background="@color/white_60"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:padding="@dimen/padding_15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_message_white_24dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drawer_messages"
                android:textSize="@dimen/textsize_18sp"
                android:paddingLeft="@dimen/padding_10dp"
                android:textColor="@color/white"
                android:gravity="bottom" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_1dp"
            android:background="@color/white_60"/>

    </LinearLayout>


</LinearLayout>