<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_distributor_sales"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sourceedge.bhagyalakshmi.orders.orderproduct.controller.Add_Product"
    tools:showIn="@layout/activity_distributor_sales"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/retailer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_15dp"
                    android:text="@string/retail_name"
                    android:textSize="@dimen/textsize_16sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/retailer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:background="@drawable/primary_outline"
                    android:text=""
                    android:maxLines="1"
                    android:padding="@dimen/dimen_15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/search_pane"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_15dp"
                    android:text="@string/product_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_16sp" />

                <RelativeLayout
                    android:id="@+id/search_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:background="@drawable/primary_outline">

                    <EditText
                        android:id="@+id/product_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/search_icon"
                        android:background="@android:color/transparent"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="@dimen/dimen_15dp" />

                    <ImageView
                        android:id="@+id/search_icon"
                        android:layout_width="@dimen/dimen_50dp"
                        android:layout_height="@dimen/dimen_50dp"
                        android:layout_alignParentRight="true"
                        android:padding="@dimen/dimen_10dp"
                        android:src="@drawable/ic_magnify_grey600_24dp" />
                </RelativeLayout>
                <android.support.v7.widget.RecyclerView
                    android:visibility="gone"
                    android:padding="@dimen/dimen_5dp"
                    android:id="@+id/product_list"
                    android:layout_width="match_parent"
                    android:background="@android:color/transparent"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:layout_marginTop="@dimen/dimen_2dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_15dp"
                android:text="@string/brand"
                android:textSize="@dimen/textsize_16sp"
                android:textColor="@color/black" />
           <!-- <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/primary_outline">
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="25dp">
                </Spinner>
            </RelativeLayout>-->
            <TextView
                android:id="@+id/product_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/primary_outline"
                android:text=""
                android:maxLines="1"
                android:padding="@dimen/dimen_15dp" />

           <!-- <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/primary_outline"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/dimen_15dp" />-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_15dp"
                android:text="@string/category"
                android:textSize="@dimen/textsize_16sp"
                android:textColor="@color/black" />

           <!-- <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/primary_outline"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/dimen_15dp" />-->
            <!--<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/primary_outline">
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="25dp">
                </Spinner>
            </RelativeLayout>-->
            <TextView
                android:id="@+id/product_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/primary_outline"
                android:text=""
                android:maxLines="1"
                android:padding="@dimen/dimen_15dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_15dp"
                android:text="@string/description"
                android:textSize="@dimen/textsize_16sp"
                android:textColor="@color/black" />

            <!--<EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/primary_outline"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/dimen_15dp" />-->
            <!--RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/primary_outline">
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="25dp">
                </Spinner>
            </RelativeLayout>-->
            <TextView
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/primary_outline"
                android:text=""
                android:maxLines="1"
                android:padding="@dimen/dimen_15dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_15dp"
                android:text="@string/units"
                android:textSize="@dimen/textsize_16sp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/product_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/primary_outline"
                android:inputType="number"
                android:maxLines="1"
                android:enabled="false"
                android:padding="@dimen/dimen_15dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_15dp"
                android:text="@string/quantity"
                android:textSize="@dimen/textsize_16sp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/primary_outline"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/dimen_15dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_15dp"
                android:text="@string/price"
                android:textSize="@dimen/textsize_16sp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/primary_outline"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:padding="@dimen/dimen_15dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:layout_marginBottom="@dimen/dimen_10dp">

                <Button
                    android:id="@+id/button_reset"
                    android:layout_width="@dimen/dimen_100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_20dp"/>

                <Button
                    android:id="@+id/button_add"
                    android:layout_width="@dimen/dimen_100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button"
                    android:layout_marginRight="@dimen/dimen_20dp"/>

                <Button
                    android:id="@+id/button_add_new"
                    android:layout_width="@dimen/dimen_100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/addandnew"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button"
                    android:layout_marginRight="@dimen/dimen_10dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
